<resources>
    <string name="app_name">Liminal</string>
    <string name="liminal">L  \u00A0\u00A0  I  \u00A0\u00A0  M  \u00A0\u00A0  I  \u00A0\u00A0  N  \u00A0\u00A0  A  \u00A0\u00A0  L</string>
    <string name="experimental">E X P E R I M E N T A L</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="signup_with_email">Sign up With Email</string>
    <string name="login">Log in</string>
    <string name="enter_email">Email</string>
    <string name="remember_me">Remember Me</string>
    <string name="enter_password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="making_history_experimental">M A K I N G \u00A0\u00A0 H I S T O R Y</string>
</resources>
